@@ -9,6 +9,7 @@
 *
 ****************************************************************************/
 
+#include "Task.h"
 #include "KickTask.h"
 #include "controller/FixedAngleTrace.h"
 #include "configuration/Configuration.h"
@@ -30,98 +31,16 @@ DEFINE_STATIC_GRAPHIC_LOGGER(KickTask)
 
 
 KickTask::KickTask( const string& firstTaskName, Task* primary ):
-	BasicKick( Vector2f(0,0), Vector2f(0,0), 2.0f, false, primary )
+	Task(-1, primary )
 {
 	mIsFirstTime=true;
 	static bool isFirstTime = true;
-	mRaiseRFootTask=firstTaskName;
-	mDuration=FAT.calTaskTime(mRaiseRFootTask) + mSquatDuration;
+	mRaiseFootTask=firstTaskName;
+	mDuration=FAT.calTaskTime(mRaiseFootTask) + 0.6;
 	if(isFirstTime)
 	{
 		isFirstTime=false;
 	}
-}
-
-
-AngDeg KickTask::getDesiredAnkleAngle()
-{
-	const Vector2f& posBall2D = WM.getInterceptBallGlobalPos2D();
-	float dist = (posBall2D-mTarget).length();
-	float err = 999;
-	AngDeg ankle = 0;
-	for( TAnkleDist::const_iterator iter = mAnkleDist.begin(); iter !=mAnkleDist.end(); iter ++ )
-	{
-		if( abs(iter->second - dist) < err )	// The current angle can make the ball closer to the target.
-		{
-			err = abs(iter->second - dist);
-			ankle = iter->first;
-		}
-	}
-
-	return ankle;
-}
-
-
-float KickTask::getDesiredDuration()
-{
-	const Vector2f posBall2D = WM.getBallGlobalPos2D();
-	float dist = (posBall2D-mTarget).length();
-	// float err = 999;
-	float duration = 0;
-
-	if( dist >= 3.0f || mMaxForce )
-		duration = 0.1f;
-	else
-		duration = 0.2f;
-
-	LOG_PRINTF("KickParameter", "acc duration:%f", duration);
-	return duration;
-}
-
-
-void KickTask::generateAnkleDistTable()
-{
-	ifstream data;
-	data.open("data/shoot_rankle-dist.data");
-
-	if(data.is_open())
-	{
-		while(!data.eof())
-		{
-			char l[30];
-			AngDeg ankle;
-			Vector2f finalBallPos;
-			data.getline(l, 30);
-			data.get();	// read enter
-			stringstream ss(l);
-			ss >> ankle >> finalBallPos[0] >> finalBallPos[1];
-			mAnkleDist[ankle] = Vector2f(finalBallPos[0], finalBallPos[1]).length();
-		}
-	}
-	data.close();
-}
-
-
-void KickTask::generateDurationDistTable()
-{
-	ifstream data;
-	data.open("data/shoot_duration-dist.data");
-
-	if(data.is_open())
-	{
-		while(!data.eof())
-		{
-			char l[30];
-			float duration;
-			Vector2f finalBallPos;
-			data.getline(l, 30);
-			data.get();	// read enter
-			stringstream ss(l);
-			ss >> duration >> finalBallPos[0] >> finalBallPos[1];
-			mDurationDist[duration] = Vector2f(finalBallPos[0], finalBallPos[1]).length();
-		}
-	}
-	data.close();
 }
 
 
@@ -144,14 +63,8 @@ shared_ptr<Action> KickTask::perform()
 		}
 		else	//start raise foot
 		{
-			if(mIsLeftLeg){
-				//printf("%s\n","set current: raise L");
-				FAT.setCurrentTask(mRaiseLFootTask);
-			}
-			else{
-				//printf("%s\n","set current: raise R");
-				FAT.setCurrentTask(mRaiseRFootTask);
-			}
+				FAT.setCurrentTask(mRaiseFootTask);
+			
 		}
 	}
 
@@ -167,6 +80,17 @@ shared_ptr<Action> KickTask::perform()
 	}
 
 } //end of KickTask::perform()
+bool KickTask::isDone () const
+{
+	if(!mSubTaskList.empty()){
+		return false;
+	}
+
+	LOG_PRINTF("isDone", "duration:%f,start time:%f,simTime:%f", mDuration,mStartTime,WM.getSimTime());
+	LOG_FLUSH;
+	return isTimeOut();
+}
+
 
 
 } //end of namespace task
