@@ -1,3 +1,6 @@
+2011-10-28 14:07 Duan Pengfei<bestdpf@gmail.com>
+seu3d-1.0.29
+complete remove class BasicKick and BasicKick.*
 2011-10-27 15:32
 seu3d-1.0.28
 complete remove class Kick and Kick.h
